themes/bcarlin/assets/css/theme.css
@font-face {
    font-family: 'bcarlin';
    src:url('../fonts/bcarlin.eot');
    src:url('../fonts/bcarlin.eot?#iefix') format('embedded-opentype'),
        url('../fonts/bcarlin.woff') format('woff'),
        url('../fonts/bcarlin.ttf') format('truetype'),
        url('../fonts/bcarlin.svg#bcarlin') format('svg');
    font-weight: normal;
    font-style: normal;
}

.custom-icon {
    font-family: 'bcarlin' !important;
    font-weight: normal !important;
    -webkit-font-feature-settings: "liga","dlig";
    -moz-font-feature-settings: "liga=1, dlig=1";
    -moz-font-feature-settings: "liga","dlig";
    -ms-font-feature-settings: "liga","dlig";
    -o-font-feature-settings: "liga","dlig";
    font-feature-settings: "liga","dlig";
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
}

/*
 * ORIGINAL CSS
 */

.navbar .container {
    max-width: 800px;
}

.container {
    max-width: 600px;
}


#q {
    width: 150px;
}

img {
    max-width: 90%;
}

td.label {
    /* Issue #290 */
    background-color: inherit;
}

.footnote-reference {
    /* Issue 290 */
    vertical-align: super;
    font-size: xx-small;
}


.caption {
    /* Issue 292 */
    text-align: center;
}

div.figure > a > img {
    /* Issue 292 */
    display: block;
    margin-left: auto;
    margin-right: auto;
}

div.admonition, div.attention, div.caution, div.danger, div.error, div.hint, div.important, div.note, div.tip, div.warning {
    /* Issue 277 */
    border: 1px solid #aaa;
    border-radius: 5px;
}

blockquote p, blockquote {
  font-size: 17.5px;
  font-weight: 300;
  line-height: 1.25;
}

ul.bricks > li {
    display: inline;
    background-color: lightblue;
    padding: 8px;
    border-radius: 5px;
    line-height: 3;
    white-space:nowrap;
    margin: 3px;
}

/*
 * CUSTOM CSS
 */

/*html {
    font-size: 13px;
}*/

body {
    /*font-family: "Lucida Sans", "DejaVu Sans", Arial, sans-serif;*/
    /*line-height: 1.7em;*/
    /*font-size:100%;*/
    /*color: #000000;*/
    padding-top: 130px;
}


/*a {
    line-height: 1em;
}*/

p {
    text-align: justify;
    margin-bottom: 10px;
}

ul {
    /*list-style-type: disc;
    list-style-position: inside;*/
    margin-bottom: 10px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Julius Sans One', sans-serif;
    color: #655D5A;
    margin: 0;
    line-height: 1em;
    font-weight: bold;
}

h1 {
  font-size: 1.6em;
  margin-top: 1.5em;
  margin-bottom: 0.8em;
}

h2 {
    font-size: 1.4em;
    margin-top: 2.5em;
    margin-bottom: 0.8em;
}

tt {
    border-radius: 5px;
    border: lightgray 1px solid;
    font-family: monospace, courrier new;
    font-size: .9em;
    padding: 1px 5px;
    white-space: nowrap;
}

a[rel='license'] img {
    height: 15px;
    width: 15px;
    margin-left: 5px;
    vertical-align: text-top;
}

/** HEADER **/

#blog-title {
    font-size: 2em;
    font-weight: bold;
    line-height: 1em;
    padding-top: 10px;
    padding-bottom: 20px;
    margin: 0;
    color: #000000;
}

#blog-title  a {
    color: inherit;
}

#blog-title a:hover {
    text-decoration: none;
}


/** Top Bar overrides **/

.navbar .brand, .navbar .nav>li>a {
    font-family: 'Julius Sans One', sans-serif;
    color: black;
    font-weight: bold;
}

.navbar .brand {
    margin-right: 20px;
    font-size: 1.6em;
    padding-top: 25px;
    padding-bottom: 25px;
}

.navbar .nav {
    font-size: 1.1em;
}

.navbar .nav>li {
    line-height: 50px;
}
.navbar-inner {
    background: white;
    border: none;
    min-height: 70px;
}

.navbar .profile {
    float: left;
    height: 50px;
    margin: 10px 10px 10px 0;
}

/** SIDEBAR **/

#sidebar .profile {
    display: block;
    margin: 10px auto 40px auto;
    width: 100px;
}

#sidebar a {
    color: inherit;
}

#sidebar a:hover {
    text-shadow: 0 0 4px rgba(187, 187, 187, 0.67);
    text-decoration: none;
    font-weight: bold;
}

.menu li {
    text-align: center;
    font-size: 1.2em;
    font-weight: bold;
    line-height: 1.8em;
}


/** CONTENT **/

time {
  color: #857D7A;
}

header h1 {
    margin-top: 10px;
}

h1 a:hover {
    text-decoration: none;
}

article header {
    margin-bottom: 30px;
    margin-top: 5px;
}

article header h1 {
    border-bottom: gray 1px solid;
    padding-bottom: 10px;
    margin-bottom: 0;
}

article aside {
    font-size: 0.85em;
}

article p {
    line-height: 1.7em;
    margin-bottom: 20px;
}

pre {
    margin-bottom: 20px;
}

nav.prevNext {
    border-bottom: gray 1px solid;
    border-top: gray 1px solid;
    margin-top: 2em;
    margin-bottom: 2em;
    overflow: hidden;
    *zoom: 1;
}
nav.prevNext:after {
    content: " ";
}

nav.prevNext .prev {
    float: left;
}

nav.prevNext .prev:before {
    content: "<  ";
}

nav.prevNext .next {
    float: right;
}

nav.prevNext .next:after {
    content: "  >";
}

/** FOOTER **/

#container > footer.row-fluid {
    color: #857D7A;
    padding: 10px;
    margin-top: 60px;
}

footer p{
    text-align: center;
    font-size: 0.85em;
    margin-bottom: 0;
}

